--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
+  <style>
+    @page {
+      size: A5
+    }
+  </style>
 
 
   <title>PowerG</title>
