change color status in deliveryDashBoard

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
 
 
 
-  <style>
+  <!-- <style>
     @page {
       size: A5
     }
-  </style>
+  </style> -->
 
 
   <title>PowerG</title>
@@ -40,7 +40,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
   <!-- Third party plugin JS-->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> -->
