change SEO in head

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,  maximum-scale=1, user-scalable=0" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="PowerG delivery in the best delivery Cambodia" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,7 +13,7 @@
 
   </script>
   <!-- HomePage -->
-  <meta name="author" content="" />
+  <meta name="author" content="powerG delivery" />
   <title>PowerG</title>
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
 
