--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,  maximum-scale=1, user-scalable=0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="PowerG delivery in the best delivery Cambodia" />
+  <meta name="keywords" content="Delivery in Cambodia">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
