super complete printer

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Khmer&display=swap" rel="stylesheet">
-  
+
+  <!-- paper.css
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css"> -->
+
   </script>
   <!-- HomePage -->
   <meta name="author" content="powerG delivery" />
